<?xml version="1.0"?>
<package>
  <name>adept_experimental</name>
  <version>0.0.0</version>
  <description>ROS-Industrial support for Adept manipulators (metapackage).</description>
  <maintainer email="ros-indigo@todo.todo">ros-indigo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <run_depend>adept_driver</run_depend> -->
  <run_depend>adept_s650_moveit_config</run_depend>
  <run_depend>adept_s650_support</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage/>
  </export>
</package>
