<?xml version="1.0"?>
<package>
  <name>adept_s650_support</name>
  <version>0.0.0</version>
  <description>
    <p>
      ROS-Industrial support for the Adept Viper s650.
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Adept Viper s650 manipulators.
    </p>
    <p>
      Joint limits and max joint velocities are based on the information in
      the Adept user guides.  All URDFs / XACROs are based on the
      default motion and joint velocity limits, unless noted otherwise.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <maintainer email="ros-indigo@todo.todo">ros-indigo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>adept_driver</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

</package>
